backend: added jwt service test